<resources>
    <string name="app_name">Newborn Numbers</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="birth_weight_label">Birth Weight (g)</string>
    <string name="day_one_label">Day 1 Weight (g)</string>
    <string name="day_two_label">Day 2 Weight (g)</string>
    <string name="day_n_label">Day n Weight (g)</string>
    <string name="birth_weight_error_label">Please select a positive value for Birth Weight</string>
    <string name="day_one_error_label">Please select a positive value for Day 1 weight</string>
    <string name="day_two_error_label">Please select a positive value for Day 2 weight</string>
    <string name="day_n_error_label">Please select a positive value for Day n weight</string>
    <string name="submit">Submit</string>
</resources>
