<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/birth_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/birthWeightLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dayOneWeightInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/dayOneWeightChangeLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dayTwoWeightInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/dayTwoWeightChangeLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:gravity="center"
        android:id="@+id/birthWeightInput"
        android:layout_below="@+id/birthWeightLabel"
        android:layout_alignLeft="@+id/dayOneWeightInput"
        android:layout_alignStart="@+id/dayOneWeightInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:id="@+id/dayOneWeightInput"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/dayOneLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/day_two_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dayTwoLabel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/dayOneWeightChangeLabel"
        android:layout_alignRight="@+id/dayNLabel"
        android:layout_alignEnd="@+id/dayNLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:id="@+id/dayTwoWeightInput"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/dayTwoLabel"
        android:layout_alignLeft="@+id/dayOneWeightInput"
        android:layout_alignStart="@+id/dayOneWeightInput" />

    <TextView
        android:text="@string/day_n_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dayNLabel"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/dayTwoWeightChangeLabel"
        android:layout_alignRight="@+id/dayOneLabel"
        android:layout_alignEnd="@+id/dayOneLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="6"
        android:id="@+id/dayNWeightInput"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/dayNLabel"
        android:layout_alignLeft="@+id/dayTwoWeightInput"
        android:layout_alignStart="@+id/dayTwoWeightInput" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitWeightButton"
        android:layout_below="@+id/dayNWeightChangeLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/dayNWeightChangeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:id="@+id/birthToDayNWeightChangeLabel" />

    <TextView
        android:text="@string/day_one_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dayOneLabel"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/birthWeightInput"
        android:layout_alignLeft="@+id/birthWeightLabel"
        android:layout_alignStart="@+id/birthWeightLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dayNWeightChangeLabel"
        android:layout_below="@+id/dayNWeightInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>